Make csv tabs closeable
Signed-off-by: kana0011 <marklynoel.alvarez@synacy.com>

--- a/src/ph/kana/csvv/fxml/csv-viewer.fxml
+++ b/src/ph/kana/csvv/fxml/csv-viewer.fxml
@@ -22,6 +22,6 @@
           </Menu>
         </menus>
       </MenuBar>
-      <TabPane fx:id="csvTableTabPane" layoutX="128.0" layoutY="109.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
+      <TabPane fx:id="csvTableTabPane" layoutX="128.0" layoutY="109.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="ALL_TABS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
    </children>
 </AnchorPane>
