--- a/src/ph/kana/csvv/fxml/csv-viewer.fxml
+++ b/src/ph/kana/csvv/fxml/csv-viewer.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -17,7 +18,14 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+                  <Menu mnemonicParsing="false" text="About">
+                    <items>
+                        <MenuItem disable="true" mnemonicParsing="false" text="VERSION - 1.0" />
+                        <MenuItem disable="true" mnemonicParsing="false" text="Created by @_kana0011" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                      <MenuItem fx:id="githubMenuClicked" mnemonicParsing="false" text="Source Code @ Github" />
+                    </items>
+                  </Menu>
             </items>
           </Menu>
         </menus>
