--- a/src/ph/kana/csvv/fxml/about-dialog.fxml
+++ b/src/ph/kana/csvv/fxml/about-dialog.fxml
@@ -13,7 +13,7 @@
       <VBox layoutX="150.0" layoutY="50.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
          <children>
             <Label fx:id="appNameLabel" text="" />
-            <Label fx:id="versionLabel" text="" />
+            <Label fx:id="versionLabel" text="">
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
