Enable drag-n-drop of files from desktop
Signed-off-by: kana0011 <marklynoel.alvarez@synacy.com>

--- a/src/ph/kana/csvv/fxml/csv-viewer.fxml
+++ b/src/ph/kana/csvv/fxml/csv-viewer.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="650.0" minWidth="600.0" prefHeight="650.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.kana.csvv.controller.CsvViewerController">
+<AnchorPane fx:id="rootPane" minHeight="650.0" minWidth="600.0" prefHeight="650.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.kana.csvv.controller.CsvViewerController">
    <children>
       <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
